feature: collect(Collectors.toList()) 대신 toList() 사용 - #98